# telemetryflow-python-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  coverage-integration.xml  coverage-unit.xml  docker-compose.yaml  junit-integration.xml  junit-unit.xml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  release.yml
.kiro/specs/: claude-integration.md  mcp-server-core.md  tool-system.md
.kiro/steering/: claude-integration.md  development-patterns.md  documentation-knowledge-base.md  mcp-protocol.md  observability.md  tech.md  testing-standards.md
configs/: tfo-mcp.yaml
docs/: ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  DEVELOPMENT.md  DFD.md  ERD.md  GIT-WORKFLOW.md  INSTALLATION.md  README.md  TROUBLESHOOTING.md
docs/githooks/: README.md  commit-msg  pre-commit  pre-push
migrations/clickhouse/: 001_analytics_schema.sql
migrations/postgres/: 001_initial_schema.sql
src/tfo_mcp/: __init__.py  main.py
src/tfo_mcp/application/: __init__.py
src/tfo_mcp/application/commands/: __init__.py  commands.py
src/tfo_mcp/application/handlers/: __init__.py  conversation_handler.py  session_handler.py  tool_handler.py
src/tfo_mcp/application/queries/: __init__.py  queries.py
src/tfo_mcp/domain/: __init__.py
src/tfo_mcp/domain/aggregates/: __init__.py  conversation.py  session.py
src/tfo_mcp/domain/entities/: __init__.py  message.py  prompt.py  resource.py  tool.py
src/tfo_mcp/domain/events/: __init__.py  events.py
src/tfo_mcp/domain/repositories/: __init__.py  repositories.py
src/tfo_mcp/domain/services/: __init__.py  claude_service.py
src/tfo_mcp/domain/valueobjects/: __init__.py  content.py  identifiers.py  mcp.py
src/tfo_mcp/infrastructure/: __init__.py
src/tfo_mcp/infrastructure/cache/: __init__.py
src/tfo_mcp/infrastructure/claude/: __init__.py  client.py
src/tfo_mcp/infrastructure/config/: __init__.py  config.py
src/tfo_mcp/infrastructure/logging/: __init__.py  logger.py
src/tfo_mcp/infrastructure/persistence/: __init__.py  memory_repositories.py
src/tfo_mcp/infrastructure/queue/: __init__.py
src/tfo_mcp/infrastructure/telemetry/: __init__.py  client.py
src/tfo_mcp/presentation/: __init__.py
src/tfo_mcp/presentation/prompts/: __init__.py  builtin_prompts.py
src/tfo_mcp/presentation/resources/: __init__.py  builtin_resources.py
src/tfo_mcp/presentation/server/: __init__.py  server.py
src/tfo_mcp/presentation/tools/: __init__.py  builtin_tools.py
tests/: __init__.py  conftest.py
tests/e2e/: test_mcp.py
tests/integration/: test_claude.py  test_persistence.py  test_server.py  test_session.py
tests/mocks/: __init__.py  claude.py  persistence.py  session.py  tool.py
tests/unit/: test_claude.py  test_cli.py  test_config.py  test_config_advanced.py  test_domain.py  test_entities.py  test_entities_advanced.py  test_events.py  test_persistence.py  test_prompts.py  test_resources.py  test_session_lifecycle.py  test_tool_handler_advanced.py  test_tools.py  test_valueobjects.py  test_valueobjects_advanced.py
