[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telemetryflow-python-mcp"
version = "1.1.2"
description = "TelemetryFlow Python MCP Server - AI Integration Layer for TelemetryFlow Platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "TelemetryFlow Team", email = "team@telemetryflow.io" }
]
keywords = ["mcp", "ai", "claude", "telemetry", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "structlog>=24.4.0",
    "click>=8.1.7",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "aiofiles>=24.1.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "pre-commit>=4.0.0",
    "types-PyYAML>=6.0.0",
    "types-aiofiles>=24.1.0",
]
redis = [
    "redis>=5.2.0",
]
nats = [
    "nats-py>=2.9.0",
]
postgres = [
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
]
clickhouse = [
    "clickhouse-connect>=0.8.0",
]
telemetry = [
    "telemetryflow>=1.1.0",
]
all = [
    "telemetryflow-python-mcp[dev,redis,nats,postgres,clickhouse,telemetry]",
]

[project.scripts]
tfo-mcp = "tfo_mcp.main:main"

[project.urls]
Homepage = "https://github.com/telemetryflow/telemetryflow-python-mcp"
Documentation = "https://docs.telemetryflow.io/mcp"
Repository = "https://github.com/telemetryflow/telemetryflow-python-mcp"
Issues = "https://github.com/telemetryflow/telemetryflow-python-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tfo_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/configs",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tfo_mcp"]

[tool.black]
line-length = 100
target-version = ["py311"]
